unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Additional_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Additional_Discount_Amount__c</fullName>
    <label>Additional Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>