unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_Refunded__c</fullName>
    <description>Auto-populates when a refunded Allocation is related to line item.</description>
    <inlineHelpText>Auto-populates when a refunded Allocation is related to line item.</inlineHelpText>
    <label>Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>