unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Amount_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_To_Apply__c</fullName>
    <description>Specify the amount of the related Credit Memo Line Item&#39;s Total to use to create this Invoice Line Item&#39;s Total. The Total will be used to back-calculate the Tax and Subtotal.</description>
    <inlineHelpText>Specify the amount of the related Credit Memo Line Item&#39;s Total to use to create this Invoice Line Item&#39;s Total. The Total will be used to back-calculate the Tax and Subtotal.</inlineHelpText>
    <label>Amount To Apply</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>