unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Amount_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_Written_Off__c</fullName>
    <description>Auto-populates when a write off Allocation is related to line item.</description>
    <inlineHelpText>The Total Amount of all Write Off Allocations associated with this Line Item.</inlineHelpText>
    <label>Amount Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>