unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Applied_Total__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Applied_Total__c</fullName>
    <description>The amount of the Total that was applied to an Invoice from a Credit or Debit Memo Line Item.</description>
    <inlineHelpText>The amount of the Total that was applied to an Invoice from a Credit or Debit Memo Line Item.</inlineHelpText>
    <label>Applied Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>