unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Balance_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Balance_Paid_Amount__c</fullName>
    <description>If  Allocations are related, this field is automatically populated. If no Allocations are present, this field will be blank, or may be manually updated.</description>
    <inlineHelpText>If  Allocations are related, this field is automatically populated. If no Allocations are present, this field will be blank, or may be manually updated.</inlineHelpText>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>