unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Code related to this Line Item, such as a discount code used for a purchase.</description>
    <inlineHelpText>The Code related to this Line Item, such as a discount code used for a purchase.</inlineHelpText>
    <label>Discount Code</label>
    <referenceTo>bt_stripe__Code__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>