unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Code_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Code_Discount_Amount__c</fullName>
    <description>The calculated discount amount for a Line Item level code discount. This is set by code and should not be manually edited.</description>
    <inlineHelpText>The calculated discount amount for a Line Item level code discount. This is set by code and should not be manually edited.</inlineHelpText>
    <label>Code Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>