unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Description__c</fullName>
    <description>The description of this Line Item.</description>
    <inlineHelpText>The description of this Line Item.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>