unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Discount_Amount__c</fullName>
    <description>The discount of this Line Item, as calculated from the Discount Value and Discount Type.</description>
    <inlineHelpText>The discount of this Line Item, as calculated from the Discount Value and Discount Type.</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>