unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Exact_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Exact_Unit_Price__c</fullName>
    <description>Unit price without rounding.</description>
    <formula>IF(
    OR(
       AND(
           bt_stripe__Unit_Price__c &gt; 0,
           bt_stripe__Unit_Price__c &lt; 1
       ), 
       AND(
           bt_stripe__Unit_Price__c &gt; -1,
           bt_stripe__Unit_Price__c &lt; 0
       )
    ),
    IF(
       bt_stripe__Unit_Price__c &lt; 0,
       &#39;-0&#39; &amp; TEXT(-1*bt_stripe__Unit_Price__c), 
       &#39;0&#39; &amp; TEXT(bt_stripe__Unit_Price__c)), 
    TEXT(bt_stripe__Unit_Price__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit price without rounding.</inlineHelpText>
    <label>Exact Unit Price</label>
    <type>Text</type>
</CustomField>