unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Is_Payment_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Is_Payment_Processing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a line item added to the invoice as a payment processing fee.</description>
    <inlineHelpText>Indicates a line item added to the invoice as a payment processing fee.</inlineHelpText>
    <label>Is Payment Processing Fee</label>
    <type>Checkbox</type>
</CustomField>