unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__IsNotDiscountable__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__IsNotDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the line item will not be discountable.</description>
    <inlineHelpText>Checking this box will prevent discounts from applying to this line item.</inlineHelpText>
    <label>Is Not Discountable</label>
    <type>Checkbox</type>
</CustomField>