unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Item_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Item_Code__c</fullName>
    <description>The code of the related Product, if applicable.</description>
    <inlineHelpText>The code of the related Product, if applicable.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>