unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Item_Name__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>