unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__List_Price__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__List_Price__c</fullName>
    <description>The list price for this Line Item, automatically populated once the Product is selected and the record is saved.</description>
    <inlineHelpText>The list price for this Line Item, automatically populated once the Product is selected and the record is saved.</inlineHelpText>
    <label>List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>