unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Net_Amount__c</fullName>
    <description>The quantity multiplied by the unit price.</description>
    <inlineHelpText>The quantity multiplied by the unit price.</inlineHelpText>
    <label>Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>