unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Parent_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Parent_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent line item related to this Discount Line Item, to show the discount associated to the parent.</description>
    <inlineHelpText>The parent line item related to this Discount Line Item, to show the discount associated to the parent.</inlineHelpText>
    <label>Parent Line Item</label>
    <referenceTo>bt_stripe__Line_Item__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>