unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>