unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Related_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Related_Key__c</fullName>
    <description>System field used by the checkout api</description>
    <externalId>true</externalId>
    <label>Related Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>