unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Retained_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retained_Amount__c</fullName>
    <formula>IF(ISNULL(bt_stripe__Balance_Paid_Amount__c), null, bt_stripe__Balance_Paid_Amount__c - NULLVALUE(bt_stripe__Amount_Refunded__c, 0))</formula>
    <inlineHelpText>The amount retained as payments. Calculated by subtracting Balance Paid from the Amount Refunded. This field will be blank if the Balance Paid is blank.</inlineHelpText>
    <label>Retained Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>