unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Service_End_Date__c</fullName>
    <description>The end date for this Line Item, if one applies.</description>
    <inlineHelpText>The end date for this Line Item, if one applies.</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>