unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Sort_Order__c</fullName>
    <description>After a new Line Item record is created and saved, the Sort Order will be automatically populated as 1 + the highest Sort Order. So if it&#39;s the 3rd Line Item on the Invoice, the value will be 3.</description>
    <inlineHelpText>After a new Line Item record is created and saved, the Sort Order will be automatically populated as 1 + the highest Sort Order. So if it&#39;s the 3rd Line Item on the Invoice, the value will be 3.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>