unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Stripe_Invoice_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Invoice_Item_Id__c</fullName>
    <label>Stripe Invoice Item Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>