unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Subscription__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Line Item is related to a Subscription.</description>
    <inlineHelpText>If this Line Item is related to a Subscription.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>bt_stripe__Subscription2__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>