unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Subtotal_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subtotal_Amount__c</fullName>
    <description>The net less the discount.</description>
    <inlineHelpText>Gross less the discount.</inlineHelpText>
    <label>Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>