unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Tax_Amount__c</fullName>
    <description>Calculated Tax Amount for the the line item.</description>
    <inlineHelpText>Calculated Tax Amount for the the line item.</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>