unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Tax_Rate__c</fullName>
    <description>The tax rate used to calculate the tax.</description>
    <inlineHelpText>The tax rate used to calculate the tax.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>