unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Total_Amount__c</fullName>
    <description>The Total amount, calculated as the Net amount plus Tax, less any written off amounts.</description>
    <inlineHelpText>The Total Amount including Tax, less any discounts and written off amounts.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>