unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Unit_Price__c</fullName>
    <description>The unit price of this line item is defaulted from the list price, but can be updated.</description>
    <inlineHelpText>The unit price of this line item is defaulted from the list price, but can be updated.
Note: Lightning Experience displays the number with two decimal places, but it is stored correctly. Salesforce Classic cannot be used to save values with a precision greater than two decimal places, use Lightning Experience instead.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>