unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__UOM__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__UOM__c</fullName>
    <description>Unit Of Measure. Automatically populated from the related Product.</description>
    <inlineHelpText>Unit Of Measure. Automatically populated from the related Product.</inlineHelpText>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>