unpackaged/main/default/objects/bt_stripe__Line_Item__c/recordTypes/bt_stripe__Invoice.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Invoice</fullName>
    <active>false</active>
    <description>Deprecated - no longer used</description>
    <label>Invoice</label>
</RecordType>