unpackaged/main/default/objects/bt_stripe__Line_Item__c/recordTypes/bt_stripe__LineItem.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__LineItem</fullName>
    <active>true</active>
    <description>use this for all non stripe line items for Invoice</description>
    <label>Line Item</label>
</RecordType>