unpackaged/main/default/objects/bt_stripe__Line_Item__c/recordTypes/bt_stripe__Order.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Order</fullName>
    <active>false</active>
    <description>Deprecated - no longer used</description>
    <label>Order</label>
</RecordType>