unpackaged/main/default/objects/bt_stripe__Line_Item__c/recordTypes/bt_stripe__StripeLineItem.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__StripeLineItem</fullName>
    <active>true</active>
    <description>use this with stripe invoice</description>
    <label>Stripe Line Item</label>
</RecordType>