unpackaged/main/default/objects/bt_stripe__Line_Item__c/validationRules/bt_stripe__Plan_Product_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Plan_Product_Match</fullName>
    <active>true</active>
    <description>Price should be related to the Product.</description>
    <errorConditionFormula>bt_stripe__Plan__c != null &amp;&amp; bt_stripe__Product__c!=null &amp;&amp; bt_stripe__Plan__r.bt_stripe__Product__c != bt_stripe__Product__c</errorConditionFormula>
    <errorDisplayField>bt_stripe__Plan__c</errorDisplayField>
    <errorMessage>Price should be related to the Product.</errorMessage>
</ValidationRule>