unpackaged/main/default/objects/bt_stripe__Line_Item__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Sales_Document__c</columns>
    <columns>bt_stripe__Product__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <columns>bt_stripe__Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>